--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,21 @@
 {
+    "name": "lab1521/NeatyHTML",
+    "type": "library",
+    "description": "Cleans up HTML markup with Tidy",
+    "keywords": ["clean","html", "Tidy"],
+    "homepage": "https://github.com/lab1521/NeatyHTML",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Marco Hermo",
+            "email": "marcz@lab1521.com",
+            "homepage": "http://lab1521.com",
+            "role": "Developer"
+        }
+    ],
+    "require": {
+        "php": ">=5.3.0"
+    },
     "autoload": {
         "psr-4": {
             "Lab1521\\": "src/"
