--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
     "require": {
         "php": ">=5.5.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "5.4.*"
+    },
     "autoload": {
         "psr-4": {
             "Lab1521\\": "src/"
